PalmerPetsProject/src/objects/Deal__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Rate__c</fullName>
        <description>The percentage of times a deal was offered and accepted</description>
        <formula>( Acceptances__c  /   Max_Acceptances__c )*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acceptance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Acceptances__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of Deals Accepted</description>
        <label>Acceptances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Deals__c</fullName>
        <description>The remaining number of times a deal can be accepted</description>
        <formula>Max_Acceptances__c  -  Acceptances__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Deals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Acceptances__c</fullName>
        <description>The max number of times a deal can be accepted</description>
        <label>Max Acceptances</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rejections__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The total number of times a deal was offered and rejected</description>
        <label>Rejections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Valid_Through__c</fullName>
        <description>The date a deal is available through</description>
        <label>Valid Through</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Deal</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>